fixed gap

--- a/css/style.css
+++ b/css/style.css
@@ -167,7 +167,7 @@ header {
     display: flex;
     flex-wrap: nowrap;
     justify-content: center;
-    align-items: center
+    align-items: center;
     gap: 40px;
 }
 
